feat: adding missing status and transaction id in shopping cart dto
